Bug 254772 - Crash setting Nice application priority from KDE System Activity
Summary: Crash setting Nice application priority from KDE System Activity
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: Process Controller - krunner part (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 271525 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-20 16:14 UTC by Tony Su
Modified: 2011-05-01 15:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony Su 2010-10-20 16:14:26 UTC
Application: krunner (0.1)
KDE Platform Version: 4.4.4 (KDE 4.4.4) "release 3"
Qt Version: 4.6.3
Operating System: Linux 2.6.34.7-0.4-desktop i686
Distribution: "openSUSE 11.3 (i586)"

-- Information about the crash:
Setting a new Nice application priority using KDE System Activity (invoked by CTL-ESC).

Using OpenSuSE 11.3, kernel 2.6.34.7-0.4-desktop.i696, KDE 4.4.4 release 3

 -- Backtrace:
Application: Run Command Interface (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  KSysGuardProcessList::updateList (this=0x8229db0) at /usr/src/debug/kdebase-workspace-4.4.4/libs/ksysguard/processui/ksysguardprocesslist.cpp:903
#7  0xb1e4e904 in KSysGuardProcessList::reniceProcesses (this=0x8229db0, pids=..., niceValue=-10) at /usr/src/debug/kdebase-workspace-4.4.4/libs/ksysguard/processui/ksysguardprocesslist.cpp:978
#8  0xb1e4ef15 in KSysGuardProcessList::reniceSelectedProcesses (this=0x8229db0) at /usr/src/debug/kdebase-workspace-4.4.4/libs/ksysguard/processui/ksysguardprocesslist.cpp:1097
#9  0xb1e4fa5b in KSysGuardProcessList::actionTriggered (this=0x8229db0, object=0x815b4b8) at /usr/src/debug/kdebase-workspace-4.4.4/libs/ksysguard/processui/ksysguardprocesslist.cpp:493
#10 0xb1e4fc9e in KSysGuardProcessList::qt_metacall (this=0x8229db0, _c=QMetaObject::InvokeMetaMethod, _id=23, _a=0xbfec6bf8)
    at /usr/src/debug/kdebase-workspace-4.4.4/build/libs/ksysguard/processui/ksysguardprocesslist.moc:178
#11 0xb6d4cefd in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#12 0xb6d5bfe8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#13 0xb6d5f685 in QSignalMapper::mapped(QObject*) () from /usr/lib/libQtCore.so.4
#14 0xb6d5f7c9 in QSignalMapper::map(QObject*) () from /usr/lib/libQtCore.so.4
#15 0xb6d5f91e in QSignalMapper::map() () from /usr/lib/libQtCore.so.4
#16 0xb6d5fec0 in QSignalMapper::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#17 0xb6d4cefd in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#18 0xb6d5bfe8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#19 0xb6279a0d in QAction::triggered (this=0x815b4b8, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#20 0xb6279cab in QAction::activate (this=0x815b4b8, event=QAction::Trigger) at kernel/qaction.cpp:1255
#21 0xb6713fb5 in QMenuPrivate::activateCausedStack (this=0x82d0338, causedStack=..., action=0x815b4b8, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1002
#22 0xb671ac87 in QMenuPrivate::activateAction (this=0x82d0338, action=0x815b4b8, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1094
#23 0xb671c058 in QMenu::mouseReleaseEvent (this=0x82537f8, e=0xbfec7554) at widgets/qmenu.cpp:2312
#24 0xb62d9f00 in QWidget::event (this=0x82537f8, event=0xbfec7554) at kernel/qwidget.cpp:8044
#25 0xb671c0dc in QMenu::event (this=0x82537f8, e=0xbfec7554) at widgets/qmenu.cpp:2421
#26 0xb6280c64 in QApplicationPrivate::notify_helper (this=0x80b97c8, receiver=0x82537f8, e=0xbfec7554) at kernel/qapplication.cpp:4302
#27 0xb6289750 in QApplication::notify (this=0xbfec726c, receiver=0x82537f8, e=0xbfec7554) at kernel/qapplication.cpp:3867
#28 0xb6f8a9d1 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#29 0xb6d46e0e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#30 0xb6281c4c in sendSpontaneousEvent (receiver=0x82537f8, event=0xbfec7554, alienWidget=0x0, nativeWidget=0x82537f8, buttonDown=0xb6bcb078, lastMouseReceiver=..., spontaneous=true)
    at ../../src/corelib/kernel/qcoreapplication.h:218
#31 QApplicationPrivate::sendMouseEvent (receiver=0x82537f8, event=0xbfec7554, alienWidget=0x0, nativeWidget=0x82537f8, buttonDown=0xb6bcb078, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2965
#32 0xb6309766 in QETWidget::translateMouseEvent (this=0x82537f8, event=0xbfec7a6c) at kernel/qapplication_x11.cpp:4314
#33 0xb630873e in QApplication::x11ProcessEvent (this=0x80b9418, event=0xbfec7a6c) at kernel/qapplication_x11.cpp:3391
#34 0xb6331570 in x11EventSourceDispatch (s=0x80bc8a8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#35 0xb59c9b49 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#36 0xb59ca350 in ?? () from /usr/lib/libglib-2.0.so.0
#37 0xb59ca60e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#38 0xb6d72d4b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#39 0xb633119a in QGuiEventDispatcherGlib::processEvents (this=0x80b95f0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#40 0xb6d4611d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#41 0xb6d46319 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#42 0xb6d4ac70 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#43 0xb627e164 in QApplication::exec () at kernel/qapplication.cpp:3581
#44 0xb1f5219d in kdemain (argc=1, argv=0x80ae448) at /usr/src/debug/kdebase-workspace-4.4.4/krunner/main.cpp:65
#45 0x0804e5b1 in _start ()

Reported using DrKonqi
Comment 1 John Tapsell 2011-03-24 01:10:14 UTC
Git commit 004d15efd977456b1438175e6d20ee2cf8f814d0 by John Tapsell.
Committed on 24/03/2011 at 01:08.
Pushed by johnflux into branch 'master'.

Fix crash when renicing a process, and it is killed

BUG:254772

M  +42   -32   libs/ksysguard/processui/ksysguardprocesslist.cpp     

http://commits.kde.org/kde-workspace/004d15efd977456b1438175e6d20ee2cf8f814d0
Comment 2 John Tapsell 2011-03-24 01:19:22 UTC
Git commit 973daba7fb809f7487d7e007bf932c381f28ca31 by John Tapsell.
Committed on 24/03/2011 at 01:08.
Pushed by johnflux into branch 'KDE/4.6'.

Fix crash when renicing a process, and it is killed

BUG:254772

M  +42   -32   libs/ksysguard/processui/ksysguardprocesslist.cpp     

http://commits.kde.org/kde-workspace/973daba7fb809f7487d7e007bf932c381f28ca31
Comment 3 Dario Andres 2011-05-01 15:27:28 UTC
*** Bug 271525 has been marked as a duplicate of this bug. ***