Fix crash when renicing a process, and it is killed

BUG:254772